--- a/stylebooki.css
+++ b/stylebooki.css
@@ -9,7 +9,8 @@ body
 #main_body
 {
     max-width: 1300px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     /* margin-top: 20px; */
 }
 
@@ -94,6 +95,11 @@ header ul
     border-top: 2px solid #0065FC ;
 }
 
+.nav_inactif:hover
+{
+    text-decoration: underline;
+}
+
 .nav_liens
 {
     padding-top: 30px;
@@ -132,16 +138,12 @@ header ul
 
 /*style formulaire*/
 
-#recherche form
-{
-    display: flex;
-    height: 50px;
-    margin: 20px auto 20px 0px;
-}
 
 .formulaire
 {
     display: flex;  
+    height: 50px;
+    margin: 20px auto 20px 0px;
 }
 
 .formulaire label
@@ -167,7 +169,15 @@ header ul
 {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 120px; 
+    font-weight: bold;
+    font-size: 17px;
+    /* width: 100%; */
+    border: none;
+    background-color: #0065FC;
+    border-radius: 0px 13px 13px 0px;
+    color: white;
 }
 
 
@@ -177,21 +187,8 @@ header ul
     padding-left: 10px;
     font-weight: bold;
     font-size: 17px;
-    max-width: 100%;
+    width: 100%; 
 }
-
-.formulaire input[type="submit"]
-{
-    font-weight: bold;
-    font-size: 17px;
-    width: 100%;
-    border: none;
-    background-color: #0065FC;
-    border-radius: 0px 13px 13px 0px;
-    color: white;
-}
-
-
 
 
 /*style barre de filtres*/
@@ -315,15 +312,20 @@ main
     background-color: #F2F2F2;
     /*padding: 25px 20px 20px 35px;*/
     border-radius: 20px;
-    padding: 25px;
+    padding: 27px;
     display: flex;
     flex-direction: column;
 }
 
+.sous_titre
+{
+    font-size: 21px;
+}
+
 article
 {
-    flex: 2;
-    width: 66%;
+    flex: 2.15; 
+    /* width: 80%; */
     margin-right: 35px;
     
 }
@@ -332,62 +334,88 @@ article
 {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
 }
 
 .vignettes
 {
     background-color: white;
-    width: 240px;
-    height: 200px;
-    margin: 8px 10px 30px 0px;
+    width: 255px; 
+    height: 200px; 
+    /* margin: 8px 10px 30px 0px; */
+    margin-bottom: 30px;
     border-radius: 20px;
     box-shadow: -3px 2px 6px #Dcdcdc;
 }
 
+.vignettes_conteneur
+{
+    display: flex;
+    flex-direction: column;
+    /* background-color: crimson; */
+    height: 100%;
+    width: 100%;
+    border-radius: 20px;
+    /* width: 240px; */
+    /* height: 200px; */
+}
+
 .vignettes_image
 {   
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    /* justify-content: center; */
     height: 110px;
-    overflow: hidden;
+    overflow: hidden; 
     margin: 5px 5px 0px 5px;
     border-radius: 20px 20px 0px 0px;
 }
 .vignettes img
 {
-    max-width: 250px;
-    height: auto;
+    max-width: 300px;
+    height: auto; 
 }
 
 .vignettes_infos
 {
-    display: flex;
-    flex-direction: column;
-    padding: 5px 5px 5px 20px;
+    /* display: flex; */
+    /* flex-direction: column; */
+    padding: 2px 2px 2px 17px;
+    height: 85px;
+    /* display: flex;  */
+    /* flex-direction: column; */
+    /* justify-content: space-around;  */
+     /* justify-content: first baseline; */
     border-radius: 0 0 20px 20px;
-    height: 80px;
+    /* height: 100%; */
+    /* background-color: brown;  */
+    /* height: 80px; */
 }
 
 .vignettes h3
 {
     font-size: 16px; 
-    margin-top: 2px;
-    margin-bottom: 4px;
+    /* background-color: beige;  */
+    margin: 6px 0 0 0; 
+    /* margin-top: 2px; */
+    /* margin-bottom: 4px; */
 }
 
 .vignettes p
 {
     font-size: 14px;
-    margin-top: 0px;
-    margin-bottom: 8px;   
+    /* background-color: blue; */
+    margin: 7px 0 0 0;  
+    /* margin-top: 0px; */
+    /* margin-bottom: 8px;    */
 }
 
 .etoiles
 {
-    margin-top: 0px;
-    display: flex;
+    /* margin-top: 0px; */
+    display: flex; 
+    /* background-color: blueviolet; */
+    margin: 8px 0 0 0;  
 }
 
 .fa-star
@@ -403,15 +431,16 @@ article
 
 .affichage
 {
-    margin-top: 0px;
+    margin: 0;
+    font-size: 19px; 
 }
 
 /*style aside*/
 
 aside
 {
-    flex: 1;
-    width: 32%;
+    flex: 0.85; 
+    /* width: 30%; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -422,7 +451,7 @@ aside
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 100%; 
 }
 
 .fa-chart-line
@@ -432,36 +461,108 @@ aside
 
 #populaires
 {
-    width: 90%;
-    height: 100%;
+    /* width: 90%; */
+    /* height: 100%; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 0;
 }
 
-
-aside .vignettes_conteneur
-{
-    display: flex;
-}
-
 aside .vignettes
 {
     width: 100%;
-    height: 145px;
+    height: 145px; 
 
+}
+
+aside .vignettes_conteneur
+{
+    flex-direction: row;
+    /* background-color: crimson; */
 }
 
 aside .vignettes_image
 {
-    border-radius: 20px 0 0 20px;
-    width: 150px;
-    height: 136px;
+    border-radius: 20px 0 0 20px; 
+    width: 230px;
+    height: 135px;
+    /* height: 136px; */
+}
+
+aside .vignettes_infos
+{
+    /* display: flex; */
+    /* flex-direction: column; */
+    padding: 15px 35px 15px 15px;
+    width: 100%;
+    height: 115px;
+    /* background-color: cyan; */
+    /* height: 85px; */
+    /* display: flex;  */
+    /* flex-direction: column; */
+    /* justify-content: space-around;  */
+     /* justify-content: first baseline; */
+    border-radius: 0 20px 20px 0;
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
+    /* background-color: brown;  */
+    /* height: 80px; */
+}
+
+.bas
+{
+    margin-top: auto;
 }
 
 aside img
 {
-    max-width: 500px;
-    height: auto;
+    /* max-width: 500px; */
+    /* height: auto; */
+}
+
+
+/* style footer */
+
+footer
+{
+    height: 240px;
+    background-color: #F2F2F2;
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    margin-top: 20px;
+}
+
+footer h2
+{
+    font-size: 16px;
+}
+
+.footer_section
+{
+    margin-right: 220px;
+    padding-top: 30px;
+    height: 100%;
+    /* background-color: cyan; */
+}
+
+.footer_section ul
+{
+    padding-left: 0;
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    /* background-color: darkblue; */
+}
+
+.footer_section li
+{
+    margin-bottom: 18px;
+}
+
+.footer_section li:hover
+{
+    text-decoration: underline;
 }
