--- a/stylebooki.css
+++ b/stylebooki.css
@@ -3,12 +3,11 @@
 body
 {
     font-family: "Raleway", Arial, Helvetica, sans-serif;
-
 }
 
 #main_body
 {
-    max-width: 1360px;
+    max-width: 1380px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -162,7 +161,7 @@ header ul
     width: 260px;
     border-top: 1px solid #F2F2F2; 
     border-bottom: 1px solid #F2F2F2;
-    height: 50px;
+    height: 48px;
     margin: 0; 
 }
 
@@ -309,6 +308,8 @@ main
 #section_principale
 {
     display: flex; 
+    justify-content: space-between;
+    width: 100%;
 }
 
 /* style article */
@@ -317,7 +318,7 @@ main
 {
     background-color: #F2F2F2;
     border-radius: 20px;
-    padding: 27px;
+    padding: 25px;
     display: flex;
     flex-direction: column;
 }
@@ -329,26 +330,29 @@ main
 
 article
 {
-    flex: 2.15; 
-    margin-right: 35px;
-    
+    width: 59%;
 }
 
 .hebergements
 {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
 }
 
 .vignettes
 {
     background-color: white;
-    width: 255px; 
-    height: 200px; 
+     
     margin-bottom: 30px;
     border-radius: 20px;
     box-shadow: -3px 2px 6px #Dcdcdc;
+}
+
+article .vignettes
+{
+    width: 31%; 
+    height: 200px;
 }
 
 .vignettes:hover
@@ -366,12 +370,17 @@ article
 }
 
 .vignettes_image
-{   
+{     
+    overflow: hidden;     
+}
+
+article .vignettes_image
+{
     height: 110px;
-    overflow: hidden; 
     margin: 5px 5px 0px 5px;
     border-radius: 20px 20px 0px 0px;
 }
+
 .vignettes img
 {
     max-width: 300px;
@@ -380,27 +389,35 @@ article
 
 .vignettes_infos
 {
-    padding: 2px 2px 2px 17px;
-    height: 85px;
+    display: flex;
+    flex-direction: column;
+    padding: 2px 5px 8px 17px;
+}
+
+article .vignettes_infos
+{
+    
+    height: 85px; 
     border-radius: 0 0 20px 20px;
+    
 }
 
 .vignettes h3
 {
     font-size: 16px; 
-    margin: 6px 0 0 0; 
+    margin: 5px 3px 0 0; 
 }
 
 .vignettes p
 {
     font-size: 14px;
-    margin: 7px 0 0 0;  
+    margin: 5px 3px 4px 0;  
 }
 
 .etoiles
 {
     display: flex; 
-    margin: 8px 0 0 0;  
+    margin: auto 0 3px 0;  
 }
 
 .fa-star
@@ -424,7 +441,7 @@ article
 
 aside
 {
-    flex: 0.85; 
+    width: 28%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -448,44 +465,40 @@ aside
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 0;
 }
 
 aside .vignettes
 {
     width: 100%;
     height: 145px; 
-
 }
 
 aside .vignettes_conteneur
 {
+    
+    display: flex;  
     flex-direction: row;
+    justify-content: space-between; 
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
 }
 
 aside .vignettes_image
 {
     border-radius: 20px 0 0 20px; 
-    width: 230px;
+    width: 130px;  
     height: 135px;
+    margin: 5px 0px 5px 5px;
+    
 }
 
 aside .vignettes_infos
 {
-    padding: 15px 35px 15px 15px;
-    width: 100%;
-    height: 115px;
+    width: 60%;  
     border-radius: 0 20px 20px 0;
-    display: flex;
-    flex-direction: column;
+    padding-top: 8px; 
 }
-
-.bas
-{
-    margin-top: auto;
-}
-
-/* style activités */
 
 #section_activites img
 {
@@ -509,25 +522,21 @@ aside .vignettes_infos
 #activites
 {
     display: flex;
+    justify-content: space-between;
 }
 
 .vignette_decoupage
 {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 22.5%;
     height: 450px;
     border-radius: 20px;
 }
 
-.petites, .milieu
-{
-    margin-left: auto;
-}
-
 .bas
 {
-    margin-top: auto;
+    margin-top: auto; 
 }
 
 .vignettes_activites
@@ -584,6 +593,7 @@ aside .vignettes_infos
     margin-bottom: 0;
     margin-top: 0;
     padding-left: 10px;
+    padding-right: 10px;
     border-radius: 0 0 20px 20px;
 }
 
@@ -594,10 +604,8 @@ footer
     height: 200px;
     background-color: #F2F2F2;
     display: flex;
-    align-items: center;
     margin-top: 60px;
-    padding-left: 30px;
-    padding-top: 17px;
+    padding: 35px 0 25px 30px;
 }
 
 footer h2
@@ -607,9 +615,8 @@ footer h2
 
 .footer_section
 {
-    margin-right: 220px;
-    padding-top: 30px;
-    height: 100%;
+    width: 30%;
+    margin-right: 10%;
 }
 
 .footer_section ul
@@ -617,7 +624,7 @@ footer h2
     padding-left: 0;
     padding-top: 10px;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;   
 }
 
 .footer_section li
